unpackaged/main/default/objects/MSA_Contract__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Due on receipt</fullName>
            </value>
            <value>
                <fullName>1% 10 Net 30</fullName>
            </value>
            <value>
                <fullName>2% 10 Net 30</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Net 45</fullName>
                <isActive>false</isActive>
                <label>Net 45</label>
            </value>
            <value>
                <fullName>Net 90</fullName>
                <isActive>false</isActive>
                <label>Net 90</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>