unpackaged/main/default/objects/MSA_Contract__c/fields/PF_Legacy_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>PF_Legacy_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>PF Legacy Account ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>