unpackaged/main/default/objects/MSA_Contract__c/fields/Plant_Termination_Rights__c.field-meta.xml
<CustomField>
    <fullName>Plant_Termination_Rights__c</fullName>
    <label>Plant Termination Rights</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terminate for asset sale</fullName>
                <default>true</default>
                <label>Terminate for asset sale</label>
            </value>
            <value>
                <fullName>Terminate for service loss</fullName>
            </value>
            <value>
                <fullName>No right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>