unpackaged/main/default/objects/MSA_Contract__c/fields/Recipient_Attn_for_Data_Breach_Notice__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Attn_for_Data_Breach_Notice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Attn for Data Breach Notice</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MSA Contracts</relationshipLabel>
    <relationshipName>MSA_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>