unpackaged/main/default/objects/MSA_Contract__c/fields/Recipient_Attn_for_General_Notice__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Attn_for_General_Notice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Attn for General Notice</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MSA Contracts (Recipient Attn for General Notice)</relationshipLabel>
    <relationshipName>MSA_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>