unpackaged/main/default/objects/MSA_Contract__c/fields/Required_Methods_to_Contact_Customer__c.field-meta.xml
<CustomField>
    <fullName>Required_Methods_to_Contact_Customer__c</fullName>
    <label>Required Methods to Contact Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Overnight courier</fullName>
            </value>
            <value>
                <fullName>Overnight courier with return receipt requested</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Email excluding termination, breach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>