unpackaged/main/default/objects/MSA_Contract__c/fields/SasS_Minimum_Pricing__c.field-meta.xml
<CustomField>
    <fullName>SasS_Minimum_Pricing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SasS Minimum Pricing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>