unpackaged/main/default/objects/MSA_Contract__c/fields/SAT_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>SAT_Approval_Required__c</fullName>
    <inlineHelpText>System Acceptance Tests are only applicable for existing Drive customers.</inlineHelpText>
    <label>SAT Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>