unpackaged/main/default/objects/MSA_Contract__c/fields/Security_Incident_Notice_Period_Hours__c.field-meta.xml
<CustomField>
    <fullName>Security_Incident_Notice_Period_Hours__c</fullName>
    <label>Security Incident Notice Period (Hours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>