unpackaged/main/default/objects/MSA_Contract__c/fields/Shared_Plant_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Shared_Plant_Discount_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The discount percentage that will be applied for a plant by billing while this customer has a subscription on the same plant as another customer. Ex. Owner and Operator both subscribe. CPQ does not calculate this; it’s applied to invoices by Finance.</inlineHelpText>
    <label>Shared Plant Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>