unpackaged/main/default/objects/MSA_Contract__c/fields/Special_and_or_Consequential_Damages__c.field-meta.xml
<CustomField>
    <fullName>Special_and_or_Consequential_Damages__c</fullName>
    <label>Special and/or Consequential Damages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specifically Allowed</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Prohibited</fullName>
                <default>true</default>
                <label>Prohibited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>