unpackaged/main/default/objects/MSA_Contract__c/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <label>Special Terms</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>