unpackaged/main/default/objects/MSA_Contract__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inexcon Technologies Inc</fullName>
            </value>
            <value>
                <fullName>Greenbyte AB</fullName>
            </value>
            <value>
                <fullName>Greenbyte Inc</fullName>
            </value>
            <value>
                <fullName>3MEGAWATT GmbH</fullName>
            </value>
            <value>
                <fullName>3 Megawatt, LLC</fullName>
            </value>
            <value>
                <fullName>Power Factors LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>