unpackaged/main/default/objects/MSA_Contract__c/fields/Support_First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Support_First_Response_Time__c</fullName>
    <label>Support First Response Time</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>