unpackaged/main/default/objects/MSA_Contract__c/fields/Uptime__c.field-meta.xml
<CustomField>
    <fullName>Uptime__c</fullName>
    <defaultValue>0.999</defaultValue>
    <label>Uptime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>