unpackaged/main/default/objects/MSA_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>MSA_Start_Date__c</columns>
    <columns>MSA_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>