unpackaged/main/default/objects/MSA_Contract__c/listViews/Migrated_MSA.listView-meta.xml
<ListView>
    <fullName>Migrated_MSA</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Data Migration TCS</value>
    </filters>
    <label>Migrated MSA</label>
</ListView>